# Multilayer-Perceptron

./: .gitignore  CMakeLists.txt
MLP/: CMakeLists.txt  a.out  main.cpp  test.cc
MLP/build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_render_scene.cpp  moc_view.cpp  ui_view.h
MLP/build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/view.app/Contents/MacOS/: view
MLP/model/S21_Matrix/: s21_matrix_oop.cc  s21_matrix_oop.h  s21_matrix_test.cc
MLP/model/acivate_funcs/: activate_func.cc  activate_func.h
MLP/model/matrix_network/: a.out  main.cc  matrix_network.cpp  matrix_network.h
MLP/view/: paintscene.cpp  paintscene.h  render_scene.cpp  render_scene.h  view.cpp  view.h  view.pro  view.ui
src/: Makefile  main.cpp  mlp
src/Controller/: controller.cpp  controller.h
src/Model/: a.out  test.cc
src/Model/ActivateFunctions/: ActivateFunction.cpp  ActivateFunction.h
src/Model/Graph/: 1.txt  GraphNeuron.cpp  GraphNeuron.h  GraphPerceptron.cpp  GraphPerceptron.h
src/Model/Matrix/: Matrix.cpp  Matrix.h
src/Model/Network/: Network.cpp  Network.h
src/Model/Weights/: weigth_2.txt  weigth_4.txt  weigth_5.txt  weigth_6.txt
src/matrix_network/: matrix_network.cpp  matrix_network.h
src/test/: test.cpp
src/view/: dvi.html  render_scene.cpp  render_scene.h  view.cpp  view.h  view.pro  view.ui
